--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" type="text/css" href="style-desktop.css"/>
 </head>
 <body>
-<h1 class="header">LiangZhaosi</h1>
+<h1 class="header">得分小游戏</h1>
 
 <div id="GameDiv" style="width:1280px; height: 720px;">
   <canvas id="GameCanvas" width="1280" height="720"></canvas>
